--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,7 @@
 {
   "name": "bronos/php-sql-migrations",
-  "description": "PHP SQL templates",
-  "keywords": [
-    "php",
-    "db",
-    "sql",
-    "database",
-    "templates"
-  ],
+  "description": "PHP SQL Migrations",
+  "keywords": ["psm", "sql", "db", "database", "migrations"],
   "license": "MIT",
   "authors": [
     {
@@ -35,7 +29,8 @@
     "bronos/php-enum": "*",
     "bronos/php-sql-schema": "dev-master",
     "bronos/php-sql-diff": "dev-master",
-    "bronos/php-sql-discovery": "dev-master"
+    "bronos/php-sql-discovery": "dev-master",
+    "symfony/console": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "*"
@@ -52,5 +47,8 @@
     "scripts": {
       "test": "vendor/bin/phpunit --coverage-clover=coverage.xml"
     }
-  }
+  },
+  "bin": [
+    "bin/psm"
+  ]
 }
